base/02-extern/02-nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deploy
  namespace: nextcloud
  labels:
    environment: extern
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: vol
          nfs:
            server: 192.168.213.2
            path: /mnt/data/cloud
      containers:
        - name: nextcloud
          image: nextcloud
          volumeMounts:
            - name: vol
              mountPath: /var/www/html
          ports:
            - containerPort: 80
              name: web
